ch10: Major Java/JVM expansion with production-ready triage
Emergency Triage (First 5 Minutes):
- 6-step decision tree for 3am debugging
- GC death spiral detection with inline awk script
- Thread dump triage patterns (bottleneck, pool starvation)
- Container CPU throttling checks
- When jstack won't work: kill -3, gdb, nsenter

JIT Internals:
- Tiered compilation levels table (C1/C2/AOT)
- Warmup verification methodology
- JITWatch setup and flame graph generation
- Deoptimization tracking and common causes
- PrintAssembly/hsdis for hot loop analysis

Heap Dump Analysis:
- Eclipse MAT workflow (dominator tree, suspects)
- OQL queries for byte arrays, retained heap
- Memory leak hunting: multi-dump comparison
- Classloader leak detection patterns
- Direct memory/off-heap leak diagnosis (Netty ByteBuf)

Low-Level JVM Mechanics:
- TLAB configuration and JFR monitoring
- Safepoint analysis and TTSP optimization
- Escape analysis diagnostics (PrintEscapeAnalysis)
- Lock contention beyond perf -e lock
- Biased locking removal (JDK 15+) impact
- False sharing detection with @Contended and JOL

Benchmarking & Containers:
- JMH setup, basic example, common pitfalls
- Blackhole usage, constant folding prevention
- Container CPU throttling (nr_throttled detection)
- RSS vs Heap memory budgeting
- DirectMemorySize container considerations

920 → 1591 lines (+72% content)